--- a/devel/saml/sp.html
+++ b/devel/saml/sp.html
@@ -146,10 +146,10 @@ All these parameters override the equivalent option from the configuration.
   is set and contains one or more values.
   Possible values:
   <div class="codehilite">
-   <pre><span></span><code>* `SAML2\Constants::COMPARISON_EXACT` (default)
-* `SAML2\Constants::COMPARISON_BETTER`
-* `SAML2\Constants::COMPARISON_MINIMUM`
-* `SAML2\Constants::COMPARISON_MAXIMUM`
+   <pre><span></span><code><span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_EXACT</span><span class="err">`</span><span class="w"> </span><span class="p">(</span><span class="k">default</span><span class="p">)</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_BETTER</span><span class="err">`</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_MINIMUM</span><span class="err">`</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_MAXIMUM</span><span class="err">`</span>
 </code></pre>
   </div>
  </dd>
@@ -209,7 +209,7 @@ All these parameters override the equivalent option from the configuration.
  </dt>
  <dd>
   Add a Subject element with a NameID to the SAML AuthnRequest for the IdP.
-  This must be a \SAML2\XML\saml\NameID object.
+  This must be a \SimpleSAML\SAML2\XML\saml\NameID object.
  </dd>
  <dt>
   <code>
@@ -271,7 +271,7 @@ The following attributes are available:
  </dt>
  <dd>
   The NameID the user was issued by the IdP.
-  This is a \SAML2\XML\saml\NameID object with the various fields from the NameID.
+  This is a \SimpleSAML\SAML2\XML\saml\NameID object with the various fields from the NameID.
  </dd>
  <dt>
   <code>
@@ -470,10 +470,10 @@ The following attributes are available:
   is set and contains one or more values.
   Possible values:
   <div class="codehilite">
-   <pre><span></span><code>* `SAML2\Constants::COMPARISON_EXACT` (default)
-* `SAML2\Constants::COMPARISON_BETTER`
-* `SAML2\Constants::COMPARISON_MINIMUM`
-* `SAML2\Constants::COMPARISON_MAXIMUM`
+   <pre><span></span><code><span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_EXACT</span><span class="err">`</span><span class="w"> </span><span class="p">(</span><span class="k">default</span><span class="p">)</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_BETTER</span><span class="err">`</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_MINIMUM</span><span class="err">`</span>
+<span class="o">*</span><span class="w"> </span><span class="err">`</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">COMPARISON_MAXIMUM</span><span class="err">`</span>
 </code></pre>
   </div>
  </dd>
@@ -817,10 +817,10 @@ The following attributes are available:
  <dd>
   An array of the format(s) listed in the SP metadata that this SP will accept. Example:
   <div class="codehilite">
-   <pre><span></span><code>    'NameIDFormat' =&gt; [
-        \SAML2\Constants::NAMEID_PERSISTENT,
-        \SAML2\Constants::NAMEID_TRANSIENT,
-    ],
+   <pre><span></span><code><span class="w">    </span><span class="err">'</span><span class="nx">NameIDFormat</span><span class="err">'</span><span class="w"> </span><span class="o">=&gt;</span><span class="w"> </span><span class="p">[</span>
+<span class="w">        </span><span class="err">\</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">NAMEID_PERSISTENT</span><span class="p">,</span>
+<span class="w">        </span><span class="err">\</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">Constants</span><span class="o">::</span><span class="nx">NAMEID_TRANSIENT</span><span class="p">,</span>
+<span class="w">    </span><span class="p">],</span>
 </code></pre>
   </div>
  </dd>
@@ -1241,9 +1241,9 @@ The following attributes are available:
  Using samlp:Extensions
 </h3>
 <div class="codehilite">
- <pre><span></span><code><span class="w">  </span><span class="err">$</span><span class="nx">dom</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">DOMDocumentFactory</span><span class="o">::</span><span class="nx">create</span><span class="p">();</span>
+ <pre><span></span><code><span class="w">  </span><span class="err">$</span><span class="nx">dom</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="err">\</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">XML</span><span class="err">\</span><span class="nx">DOMDocumentFactory</span><span class="o">::</span><span class="nx">create</span><span class="p">();</span>
 <span class="w">  </span><span class="err">$</span><span class="nx">ce</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="err">$</span><span class="nx">dom</span><span class="o">-&gt;</span><span class="nx">createElementNS</span><span class="p">(</span><span class="err">'</span><span class="nx">http</span><span class="p">:</span><span class="c1">//www.example.com/XFoo', 'xfoo:test', 'Test data!');</span>
-<span class="w">  </span><span class="err">$</span><span class="nx">ext</span><span class="p">[]</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="nx">new</span><span class="w"> </span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">XML</span><span class="err">\</span><span class="nx">Chunk</span><span class="p">(</span><span class="err">$</span><span class="nx">ce</span><span class="p">);</span>
+<span class="w">  </span><span class="err">$</span><span class="nx">ext</span><span class="p">[]</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="nx">new</span><span class="w"> </span><span class="err">\</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">SAML2</span><span class="err">\</span><span class="nx">XML</span><span class="err">\</span><span class="nx">Chunk</span><span class="p">(</span><span class="err">$</span><span class="nx">ce</span><span class="p">);</span>
 
 <span class="w">  </span><span class="err">$</span><span class="nx">auth</span><span class="w"> </span><span class="p">=</span><span class="w"> </span><span class="nx">new</span><span class="w"> </span><span class="err">\</span><span class="nx">SimpleSAML</span><span class="err">\</span><span class="nx">Auth</span><span class="err">\</span><span class="nx">Simple</span><span class="p">(</span><span class="err">'</span><span class="k">default</span><span class="o">-</span><span class="nx">sp</span><span class="err">'</span><span class="p">);</span>
 <span class="w">  </span><span class="err">$</span><span class="nx">auth</span><span class="o">-&gt;</span><span class="nx">login</span><span class="p">([</span>
