--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -89,6 +89,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-205">
+      Version 2.0.5
+     </a>
+    </li>
+    <li>
      <a href="#version-204">
       Version 2.0.4
      </a>
@@ -121,11 +126,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-205">
+ Version 2.0.5
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-204">
  Version 2.0.4
 </h2>
 <p>
- Released TBD
+ Released 2023-05-12
 </p>
 <ul>
  <li>
@@ -154,6 +165,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Restored the possibility to use HTTP-Artifact binding on AuthnRequests
  </li>
+ <li>
+  Removed unused private method MetaDataStorageSource::getDynamicHostedUrl (leftover from entityid generation)
+ </li>
+ <li>
+  Bumped simplesamlphp-assets-base
+ </li>
 </ul>
 <p>
  <code>
@@ -175,7 +192,7 @@ See the upgrade notes for specific information about upgrading.
 </p>
 <ul>
  <li>
-  Fixed a static call to a non-static function that caused a broken artifact binding (#332)
+  Fixed a static call to a non-static function that caused a broken artifact binding (v4.6.8)
  </li>
 </ul>
 <h2 id="version-203">
