--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -132,6 +132,11 @@ See the upgrade notes for specific information about upgrading.
 <p>
  Released TBD
 </p>
+<ul>
+ <li>
+  Updated German translations (#1814)
+ </li>
+</ul>
 <h2 id="version-204">
  Version 2.0.4
 </h2>
