--- a/devel/simplesamlphp-upgrade-notes-2.1.html
+++ b/devel/simplesamlphp-upgrade-notes-2.1.html
@@ -83,101 +83,32 @@
  <div id="content">
  </div>
 </header>
-<main><h1 id="simpesamlphp-upgrade-notes">
- SimpeSAMLphp Upgrade Notes
+<main><h1 id="upgrade-notes-for-simplesamlphp-21">
+ Upgrade notes for SimpleSAMLphp 2.1
 </h1>
 <p>
- See the following pages for important information for users upgrading
-from older versions of SimpleSAMLphp:
+ SimpleSAMLphp 2.1 is a minor new release which bumps some
+of the minimum requirements to be able to run SimpleSAMLphp.
+The following changes are relevant for installers and/or developers.
 </p>
+<h2 id="software-requirements">
+ Software requirements
+</h2>
 <ul>
  <li>
-  <a href="simplesamlphp-upgrade-notes-2.1.html">
-   Upgrade notes for version 2.1
-  </a>
+  The minimum PHP version required is now PHP 8.0.
  </li>
  <li>
-  <a href="simplesamlphp-upgrade-notes-2.0.html">
-   Upgrade notes for version 2.0
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.19.html">
-   Upgrade notes for version 1.19
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.18.html">
-   Upgrade notes for version 1.18
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.17.html">
-   Upgrade notes for version 1.17
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.16.html">
-   Upgrade notes for version 1.16
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.15.html">
-   Upgrade notes for version 1.15
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.14.html">
-   Upgrade notes for version 1.14
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.13.html">
-   Upgrade notes for version 1.13
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.12.html">
-   Upgrade notes for version 1.12
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.11.html">
-   Upgrade notes for version 1.11
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.10.html">
-   Upgrade notes for version 1.10
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.9.html">
-   Upgrade notes for version 1.9
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.8.html">
-   Upgrade notes for version 1.8
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.7.html">
-   Upgrade notes for version 1.7
-  </a>
- </li>
- <li>
-  <a href="simplesamlphp-upgrade-notes-1.6.html">
-   Upgrade notes for version 1.6
-  </a>
+  Dropped support for Symfony 5.4.
  </li>
 </ul>
+<h2 id="two-builds">
+ Two builds
+</h2>
 <p>
- A detailed list of changes in each release can be found in the
- <a href="simplesamlphp-changelog.html">
-  Changelog
- </a>
- .
+ As of SimpleSAMLphp 2.1 two builds are created for every release.
+The 'slim' build is a lightweight build without any modules other than the core modules installed (alike the 2.0 build).
+A new 'full' build is added that will come with the most used modules pre-installed.
 </p>
 </main></body>
 </html>
