--- a/devel/simplesamlphp-upgrade-notes.html
+++ b/devel/simplesamlphp-upgrade-notes.html
@@ -92,6 +92,11 @@ from older versions of SimpleSAMLphp:
 </p>
 <ul>
  <li>
+  <a href="simplesamlphp-upgrade-notes-2.1.html">
+   Upgrade notes for version 2.1
+  </a>
+ </li>
+ <li>
   <a href="simplesamlphp-upgrade-notes-2.0.html">
    Upgrade notes for version 2.0
   </a>
