--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -156,6 +156,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix static call for non-static method in bin/initMDSPdo.php (#1892)
  </li>
+ <li>
+  Restore logout-behaviour for IdP's that do not send a saml:NameID in their LogoutRequest (#1894)
+ </li>
 </ul>
 <h2 id="version-207">
  Version 2.0.7
