--- a/2.1/simplesamlphp-changelog.html
+++ b/2.1/simplesamlphp-changelog.html
@@ -180,6 +180,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed the precondition-functionality for more complex authproc-filters (#1905)
  </li>
+ <li>
+  Reverted a case of 'constructor property promotion' in SAMLParser, causing the validators to be empty (#1904)
+ </li>
 </ul>
 <p>
  <code>
