--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -94,6 +94,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-209">
+      Version 2.0.9
+     </a>
+    </li>
+    <li>
      <a href="#version-208">
       Version 2.0.8
      </a>
@@ -146,11 +151,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-209">
+ Version 2.0.9
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-208">
  Version 2.0.8
 </h2>
 <p>
- Released TBD
+ Released 2023-11-28
 </p>
 <ul>
  <li>
