--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -176,6 +176,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fixed a TypeError when accessing the module.php endpoint without specifying a module (#1907)
  </li>
+ <li>
+  Drop ext-intl in favour of a polyfill (#1908)
+ </li>
 </ul>
 <p>
  <code>
