--- a/stable/simplesamlphp-changelog.html
+++ b/stable/simplesamlphp-changelog.html
@@ -184,6 +184,9 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Fix legacy-endpoints to not send responses twice
  </li>
+ <li>
+  Fix exception when using iframe-logout (#1936)
+ </li>
 </ul>
 <p>
  <code>
