--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -170,6 +170,12 @@ See the upgrade notes for specific information about upgrading.
  <li>
   Look for the schema files in the right place (#1929)
  </li>
+ <li>
+  Fixed file logging handler to not fail on the first write after file-creation (#1877)
+ </li>
+ <li>
+  Fixed a warning in the RequestedAuthnContextSelector
+ </li>
 </ul>
 <p>
  <code>
@@ -242,9 +248,6 @@ See the upgrade notes for specific information about upgrading.
  </li>
  <li>
   Fixed a warning in the RequestedAuthnContextSelector
- </li>
- <li>
-  Fixed file logging handler to not fail on the first write after file-creation (#1877)
  </li>
 </ul>
 <h2 id="version-206">
