--- a/stable/simplesamlphp-install.html
+++ b/stable/simplesamlphp-install.html
@@ -138,8 +138,8 @@
      </ul>
     </li>
     <li>
-     <a href="#configuring-apache-section_4">
-      Configuring Apache {#section_4}
+     <a href="#configuring-apache">
+      Configuring Apache
      </a>
     </li>
     <li>
@@ -148,8 +148,8 @@
      </a>
     </li>
     <li>
-     <a href="#simplesamlphp-configuration-configphp-section_6">
-      SimpleSAMLphp configuration: config.php {#section_6}
+     <a href="#simplesamlphp-configuration-configphp">
+      SimpleSAMLphp configuration: config.php
      </a>
     </li>
     <li>
@@ -518,8 +518,8 @@ directory doesn't need to be inside the library's directory, making it easier to
 to set this environment variable is to set it in your web server's configuration. See the next section for more
 information.
 </p>
-<h2 id="configuring-apache-section_4">
- Configuring Apache {#section_4}
+<h2 id="configuring-apache">
+ Configuring Apache
 </h2>
 <p>
  Examples below assume that SimpleSAMLphp is installed in the default location,
@@ -591,7 +591,7 @@ whatever you want, but the name must be specified in the
  </code>
  file of
 SimpleSAMLphp as described in
- <a href="simplesamlphp-install#section_6.html">
+ <a href="simplesamlphp-install#configuration.html">
   the section called “SimpleSAMLphp configuration: config.php”
  </a>
  .
@@ -640,7 +640,7 @@ directory too, use the
 <p>
  This is just the basic configuration to get things working. For a checklist
 further completing your documentation, please see
- <a href="simplesamlphp-maintenance#section_5.html">
+ <a href="simplesamlphp-maintenance.html">
   Maintenance and configuration: Apache
  </a>
  .
@@ -705,8 +705,8 @@ look like this:
 <span class="p">}</span>
 </code></pre>
 </div>
-<h2 id="simplesamlphp-configuration-configphp-section_6">
- SimpleSAMLphp configuration: config.php {#section_6}
+<h2 id="simplesamlphp-configuration-configphp">
+ SimpleSAMLphp configuration: config.php
 </h2>
 <p>
  There are a few steps that you should complete in the main configuration file,
@@ -1115,7 +1115,7 @@ this folder there are a lot of subfolders for library, metadata, configuration, 
  </code>
  directive, as
 described in
- <a href="simplesamlphp-install#section_4.html">
+ <a href="simplesamlphp-install#configuring-apache.html">
   the section called “Configuring Apache”
  </a>
  . This is not the only
