--- a/2.0/simplesamlphp-changelog.html
+++ b/2.0/simplesamlphp-changelog.html
@@ -99,6 +99,11 @@
    </a>
    <ul>
     <li>
+     <a href="#version-2013">
+      Version 2.0.13
+     </a>
+    </li>
+    <li>
      <a href="#version-2012">
       Version 2.0.12
      </a>
@@ -171,11 +176,17 @@
  This document lists the changes between versions of SimpleSAMLphp.
 See the upgrade notes for specific information about upgrading.
 </p>
+<h2 id="version-2013">
+ Version 2.0.13
+</h2>
+<p>
+ Released TBD
+</p>
 <h2 id="version-2012">
  Version 2.0.12
 </h2>
 <p>
- Released TBD
+ Released 28-04-2024
 </p>
 <ul>
  <li>
